--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
 	// JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	// 스프링 시큐리티
