--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,13 @@
 server:
   port: 80
 
-# My-SQL, JPA Setting, Thymeleaf
+# Multipart, My-SQL, JPA Setting, Thymeleaf
 spring:
+  servlet:
+    multipart:
+      location: C:/gangnampro2/image/upload
+      max-file-size: 10MB
+      max-request-size: 10MB
   thymeleaf:
     cache: false                    # .html 변경사항 실시간 반영 (운영시는 true)
     check-template-location: true   # .templates 디렉토리에 파일이 있는지 없는지 체크, 없으면 에러를 발생
